fix overflow navbar mobile

--- a/wiki/src/components/navbar/Navbar.css
+++ b/wiki/src/components/navbar/Navbar.css
@@ -91,6 +91,7 @@
   }
   /* Menu hors écran */
   .nav-menu {
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     width: 100%;
